--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="header__active">Главная</li>
                 <li>Контакты</li>
             </div>
-            <div class="header__button"><button class="button">Заказать</button></div>
+            <div class="header__button"><a href="#form"><button class="button">Заказать</button></a></div>
             <div class="header__logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
         </header>
         <section class="sale">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </section>
-        <section class="form">
+        <section class="form" id="form">
             <div class="form__title title">Форма заказа</div>
             <div class="form__subtitle subtitle">Закажите деревянные конструкции в 2 клика</div>
             <div class="form__form">
